<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geo Quiz</string>
    <string name="action_settings">Settings</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">Prev</string>
    <string name="next_button">Next</string>

    <string name="cheater_toast">Cheating is wrong!</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="question_oceans">The Pacific Ocean is larger than the Altantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The Source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="show_answer_button">Show Answer</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="cheat_button">Cheat</string>
    <string name="app_subtitle">Bodies of Water</string>

</resources>
